--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "sass": "^1.78.0",
     "sass-loader": "^16.0.1",
     "slick-carousel": "^1.8.1",
+    "socket.io": "^4.8.0",
+    "socket.io-client": "^4.7.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -43,5 +45,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   }
 }
